Improved responsive look

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="main__nav">
-            <img src="imgs/LOGO.png" alt="" height="200px">
+            <img src="imgs/LOGO.png" alt="rpl-logo" height="130px">
             <ul>
                 <li><a href="#home-section" class="hover-underline-animation is-active">HOME</a></li>
                 <li><a href="#portfolio-section" class="hover-underline-animation">PORTFOLIO</a></li>
