Added portfolio website

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="main__content--portfolio" id="portfolio-section">
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/2.png" alt="">
+                    <img src="imgs/blockchain-site-portfolio.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
                     <img src="imgs/3.jpg" alt="">
