--- a/index.html
+++ b/index.html
@@ -70,43 +70,43 @@
                     <a href="https://blockchain.ogrepdev.dev/"><img src="imgs/blockchain-site-portfolio.png" alt=""></a>
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/3.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/4.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/5.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/6.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/7.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/6.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/3.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/5.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/2.png" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/4.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/6.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/2.png" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/4.jpg" alt="">
+                    <img src="imgs/comming-soon.png" alt="">
                 </div>
             </div>
             <div class="main_content--games" id="games-section">
