--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="main__nav--icons">
                 <span class="js-main__nav--clock"></span>
                 <div class="main__nav-icons-icons">
-                    <a href=""><i class="fa-brands fa-github"></i></a></i>
+                    <a href="https://github.com/OgRepDev"><i class="fa-brands fa-github"></i></a></i>
                     <a href=""><i class="fa-brands fa-facebook-f"></i></a></i>
                     <a href=""><i class="fa-brands fa-linkedin-in"></i></a></i>
                 </div>
