Added controller website to portoflio

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <a href="https://blockchain.ogrepdev.dev/"><img src="imgs/blockchain-site-portfolio.png" alt=""></a>
                 </div>
                 <div class="main__content--portfolio-slide">
-                    <img src="imgs/comming-soon.png" alt="">
+                    <a href="https://controller.ogrepdev.dev/"><img src="imgs/controller-site-portfolio.png" alt=""></a>
                 </div>
                 <div class="main__content--portfolio-slide">
                     <img src="imgs/comming-soon.png" alt="">
